--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
             <br />
            <div class="presenting">
-    <b>Presenting horses</b><br /><br />
-     We make sure that the horses we have for sale look presentable at all times, in the stable as well as on pictures. 
+    <b>Proven results</b><br /><br />
+     All our horses are making progress with reliable results. They are trained in a system based on clear and consequent signals in a stress-free environment. The horses in our training system are free of force and keep their natural curiosity and willingness to learn. 
     </div></div>
     
          <br />
@@ -67,7 +67,7 @@
        <div class="harmonius">
     <b>Harmonius training </b><br /><br />
             <hr/>
-           All our horses are making progress with reliable results. They are trained in a system based on clear and consequent signals, in a stress-free environment. The horses in our training system are free of force and therefore they keep their natural curiosity and willingness to learn. Stress limits the brains capacity to take in new knowledge. Both humans and horses. We therefore make sure that the training of our horses is always in a calm and harmonious atmosphere.<hr/>
+            Stress limits the brains capacity to take in new knowledge. Both humans and horses. We therefore make sure that the training of our horses is always in a calm and harmonious atmosphere.<hr/>
     </div>
     
 
